plugins {
    id 'org.springframework.boot' version '3.3.4'
    id 'io.spring.dependency-management' version '1.1.6'
    id 'java'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'
java.toolchain.languageVersion = JavaLanguageVersion.of(21)

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-aop'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'io.micrometer:micrometer-registry-prometheus'
    runtimeOnly 'com.h2database:h2'
}

tasks.named('test') {
    useJUnitPlatform()
}

bootRun {
    jvmArgs = [
        '-Xms256m',
        '-Xmx256m',
        '-XX:+HeapDumpOnOutOfMemoryError',
        '-XX:HeapDumpPath=.',
        '-XX:NativeMemoryTracking=summary',
        '-Xlog:gc*:file=gc.log:time,uptime,level,tags:filecount=3,filesize=5M'
    ]
}
